<resources>
    <string name="app_name">Watertrek App</string>
    <string name="showResources">Show Resources</string>
    <string name="settings">Settings</string>
    <string name="range">Range (km)</string>
    <string name="camera">Camera View</string>
    <string name="mountains">Mountains</string>
    <string name="wells">Wells</string>
    <string name="credentials">WaterTrek Credentials</string>
    <string name="soilMoisture">Soil Moisture</string>
    <string name="rivers">Rivers</string>
    <string name="reservoirs">Reservoirs</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="submit_button">Submit</string>
    <string name="title_activity_demo">DemoActivity</string>
    <string name="title_activity_mesh_demo">MeshDemoActivity</string>

    <string name="title_activity_navigation">Navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="navigation_map">Map</string>
    <string name="navigation_graph">Graph</string>
    <string name="navigation_list">List</string>

    <string name="permission_settings">Permission Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
