<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.calstatela.jplone.watertrekapp.activities.MainActivity">


    <!-- This layout is where the ARView will go -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:id="@+id/ar_view_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <!-- transparent layer on top of ar view fixes the drawer -->
        <FrameLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="@android:color/transparent"/>
    </RelativeLayout>



    <!-- This layout allows the Menu Button to be placed on top of AR View -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/menu_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:onClick="onMenuButtonClicked"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/gear_settings" />

    </RelativeLayout>

    <!-- Left Drawer -->
    <RelativeLayout
        android:id="@+id/whatYouWantInLeftDrawer"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start">


        <View
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDarkTrans" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
<<<<<<< HEAD
            android:text="Settings"
=======
            android:text="@string/settings"
>>>>>>> 9402117896e1c8079f2e7c9d022485382c7d2224
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="10dp"
<<<<<<< HEAD
            android:text="Show resources"
=======
            android:text="@string/showResources"
>>>>>>> 9402117896e1c8079f2e7c9d022485382c7d2224
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/mtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="130dp"
            android:background="@null"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/mtn_res_ico_clr" />

        <ImageView
            android:id="@+id/reservoir"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="185dp"
            android:background="@null"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/reservoir_res_ico_clr" />

        <ImageView
            android:id="@+id/well"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="240dp"
            android:background="@null"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/well_res_ico_clr" />

        <ImageView
            android:id="@+id/river"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="295dp"
            android:background="@null"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/river_res_ico_clr" />

        <ImageView
            android:id="@+id/soil"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="350dp"
            android:background="@null"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/grass_res_ico_clr" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="420dp"
            android:layout_marginLeft="10dp"
<<<<<<< HEAD
            android:text="Range (km)"
=======
            android:text="@string/range"
>>>>>>> 9402117896e1c8079f2e7c9d022485382c7d2224
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/switch8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="140dp"
<<<<<<< HEAD
            android:text="Mountains      "
=======
            android:text="@string/mountains"
>>>>>>> 9402117896e1c8079f2e7c9d022485382c7d2224
            android:onClick="toggleMountain"
            android:textColor="@color/white"/>


        <Switch
            android:id="@+id/switch11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="195dp"
<<<<<<< HEAD
            android:text="Reservoirs      "
=======
            android:text="@string/reservoirs"
>>>>>>> 9402117896e1c8079f2e7c9d022485382c7d2224
            android:onClick="toggleReservoir"
            android:textColor="@color/white"/>

        <Switch
            android:id="@+id/switch9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="250dp"
<<<<<<< HEAD
            android:text="Wells                "
=======
            android:text="@string/wells"
>>>>>>> 9402117896e1c8079f2e7c9d022485382c7d2224
            android:onClick="toggleWell"
            android:checked="false"
            android:textColor="@color/white"/>

        <Switch
            android:id="@+id/switch10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="305dp"
<<<<<<< HEAD
            android:text="Rivers               "
=======
            android:text="@string/rivers"
>>>>>>> 9402117896e1c8079f2e7c9d022485382c7d2224
            android:onClick="toggleRiver"
            android:textColor="@color/white"/>

        <Switch
            android:id="@+id/switch12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="360dp"
<<<<<<< HEAD
            android:text="Soil Moisture  "
=======
            android:text="@string/soilMoisture"
>>>>>>> 9402117896e1c8079f2e7c9d022485382c7d2224
            android:onClick="toggleSoil"
            android:textColor="@color/white"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="450dp">

            <SeekBar
                android:id="@+id/seekBar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"

                android:max="4"
                android:progress="3" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:text="5"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="30dp"/>
                <TextView
                    android:text="10"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="30dp"/>
                <TextView
                    android:text="15"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="30dp"/>
                <TextView
                    android:text="20"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="30dp"/>
                <TextView
                    android:text="25"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="20dp"/>


            </LinearLayout>



        </LinearLayout>

        <!-- you can have many more widgets here like buttons or labels -->

<<<<<<< HEAD
        <Button
            android:id="@+id/watertrek_credentials_button"
=======

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <Button
            android:id="@+id/logout_button"
>>>>>>> 9402117896e1c8079f2e7c9d022485382c7d2224
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="500dp"
<<<<<<< HEAD
            android:text="Watertrek Credentials"
            android:onClick="launchWatertrekCredentials"
            android:textColor="@color/white"/>
=======
            android:text="Logout"
            android:onClick="logout"
            android:textColor="@color/green"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="500dp"
            android:text="Login"
            android:onClick="login"
            android:textColor="@color/green"/>
        </LinearLayout>
>>>>>>> 9402117896e1c8079f2e7c9d022485382c7d2224

    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>